welcome.lessons.welcome.traversal.line.TraversalByLine.scala.error
LineByLine:1: error: reassignment to val
def positionFinale()=Boolean = {
                             ^LineByLine:13: error: value update is not a member of Int
			if ((getX()=6 % 7) && (!postionFinale())){
                             ^